--- a/assets/css/sass/main.scss
+++ b/assets/css/sass/main.scss
@@ -3,5 +3,7 @@ ul, li {
     padding: 0;
 }
 @import './header.scss';
+@import './banner.scss';
 @import './core.scss';
-@import './features.scss'
+@import './features.scss';
+@import './product.scss';
