--- a/assets/css/sass/banner.scss
+++ b/assets/css/sass/banner.scss
@@ -4,10 +4,10 @@
   width: 100%;
   height: 100vh;
   overflow: hidden;
-  background-image: url('image/Dotted.svg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: 0;
+  // background-image: url('image/Dotted.svg');
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  // z-index: 0;
 
   &::before {
     content: '';
@@ -16,7 +16,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 100%;
-    height: 809px;
+    height: 100vh;
     opacity: 30%;
     mix-blend-mode: hard-light;
     background: radial-gradient(49.19% 50% at 50% 50%, #67CBAF 0%, #364849 95.5%);
@@ -35,8 +35,8 @@
   .container {
     position: relative;
     z-index: 2;
-    // height: 100%;
-    // display: flex;
+    height: 100%;
+    display: flex;
     // align-items: center;
     // justify-content: center;
   }
@@ -57,18 +57,29 @@
 
     h1 {
       font-size: 60px;
-      line-height: 1.2;
-      margin-bottom: 40px;
+      line-height: 20px;
+      margin-bottom: 0px;
       text-transform: capitalize;
       span {
-        color: $secondary-color;
+        .text-line text {
+          stroke-dasharray: 500;
+          stroke-dashoffset: 500;
+          animation: dash 5s linear infinite, filling 4s ease-in forwards;
+        }
+        
+        @keyframes dash {
+          to {
+            stroke-dashoffset: 0;
+          }
+        }
+        
       }
     }
 
     p {
       font-size: 1rem;
-      line-height: 1.5;
-      margin-bottom: 30px;
+      line-height: 24px;
+      margin-bottom: 40px;
     }
   }
 
@@ -89,10 +100,11 @@
     @include primaryBg;
     padding: 15px 20px;
     border: 1px solid transparent;
-    margin-right: 35px;
+    margin-right: 20px;
     transition: all 0.5s ease-in;
     border-radius: 8px;
     width: 140px;
+    line-height: 21px;
     &:hover {
         background: transparent;
         border: 1px solid $primary-color;
@@ -106,6 +118,7 @@
     transition: all 0.3s ease-in;
     border-radius: 8px;
     width: 140px;
+    line-height: 21px;
     &:hover {
         background: $primary-color;
         border: 1px solid transparent;
