--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -4,6 +4,10 @@ body {
 
 header {
   padding: 30px 40px;
+  position: absolute;
+  top: 0;
+  z-index: 9999;
+  width: 100%;
 }
 header .navbar-expand-lg .navbar-nav {
   flex: 1;
