--- a/assets/css/sass/main.scss
+++ b/assets/css/sass/main.scss
@@ -1,9 +1,20 @@
-ul, li {
-    margin: 0;
-    padding: 0;
+ul,
+li {
+  margin: 0;
+  padding: 0;
 }
-@import './header.scss';
-@import './banner.scss';
-@import './core.scss';
-@import './features.scss';
-@import './product.scss';
+@import "./header.scss";
+@import "./banner.scss";
+@import "./core.scss";
+@import "./product_intro.scss";
+@import "./features.scss";
+@import "./product.scss";
+@import "./developer.scss";
+@import "./counter.scss";
+@import "./blog.scss";
+@import "./testimonial.scss";
+@import "./faq.scss";
+@import "./marquee.scss";
+@import "./newsletter.scss";
+@import "./playstore.scss";
+@import "./footer.scss";
