--- a/assets/css/sass/blog.scss
+++ b/assets/css/sass/blog.scss
@@ -36,7 +36,7 @@
 
     .card-body {
       padding: 0px 28px 33px 27px;
-      width: 383px;
+      width: 100%;
       border-radius: 0 0 8px 8px;
       border: 1px solid $tertiary-color;
       margin: 0 auto;
