--- a/assets/css/sass/developer.scss
+++ b/assets/css/sass/developer.scss
@@ -27,41 +27,63 @@
         background-color: #1A2D2C;
         padding:25px;
         border-radius: 12px;
-        transition: all 0.6s ease;
-        --border-angle: 0turn;
-        --main-bg: conic-gradient(
-            from var(--border-angle),
-            #1A2C2A 0%,  
-            #1A2C2A 100%
-            );
         border: solid 1px transparent;
-        --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #F7C35F, #3EAB90 99%, transparent);
-        background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
-        background-position: center center;
-        animation: bg-spin 4s linear infinite;
-        @keyframes bg-spin {
-            to {
-            --border-angle: 1turn;
+        --border-angle: 0turn;
+            --main-bg: conic-gradient(
+                from var(--border-angle),
+                #1A2C2A 0%,  
+                #1A2C2A 100%
+                );
+            --gradient-border: conic-gradient(from var(--border-angle), transparent 10%, #05311d, #3EAB90 49%, transparent);
+            background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
+            background-position: center center;
+            animation: bg-spin 8s linear infinite;
+
+        &:hover {
+            --border-angle: 0turn;
+            --main-bg: conic-gradient(
+                from var(--border-angle),
+                #1A2C2A 0%,  
+                #1A2C2A 100%
+                );
+            --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #F7C35F, #3EAB90 99%, transparent);
+            background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
+            background-position: center center;
+            animation: bg-spin 4s linear infinite;
+            @keyframes bg-spin {
+                to {
+                --border-angle: 1turn;
+                }
             }
         }
        
         @media screen and (max-width:992px) {
             text-align: center;
         }
-
-        img{
-            width: 40px;
-            height: 40px;
+        .dev_card_logo {
+            display: inline-flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+        }
+        span{
+            width: 60px;
+            height: 60px;
             object-fit: contain;
             background-color: $primary-color;
             padding: 10px;
             border-radius: 50%;
             margin-bottom:10px;
+            img{
+                width: 100%;
+                height: 100%;
+            }
         }
         h4{
             font-size: 20px;
             color: $primary-color;
             padding-bottom:10px;
+            color: #d7ba7d;
         }
         p{
             color: $white;
@@ -70,22 +92,18 @@
         }
        }
     }
-    .dev_right{
-       
-        position: relative;
-        @media screen and (max-width:992px) {
-            margin-top: 20px;
-        }
-        video{
-            width: 47vw;
-            height: 100%;
-            @media screen and (max-width:992px) {
-                width: 100%;
-                height: 100%;
-            }
-        }
+    .code-container {
+        white-space: pre; /* Preserve code formatting */
+        font-size: 16px;
+        line-height: 1.5;
+        margin: 0 auto;
+        text-align: left; /* Align text to the left */
+        max-width: 100%; /* Allow the code to wrap naturally */
     }
-   
+    #processingText{
+        color: $white;
+    }
+
     #typingEffect{
         color: #d7ba7d;
         border-top: 1px solid #64748B4D;
@@ -114,11 +132,13 @@
                 #1A2C2A 100%
                 );
             border: solid 1px transparent;
-            border-radius: 2em;
-            --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #F7C35F, #3EAB90 99%, transparent);
+            border-radius: 1em;
+            --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #f7c35f33, #3EAB90 99%, transparent);
             background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
             background-position: center center;
             animation: bg-spin 4s linear infinite;
+            animation-delay: 0.5s; 
+            min-height: 600px;
             @keyframes bg-spin {
                 to {
                 --border-angle: 1turn;
@@ -126,19 +146,19 @@
             }
         }
 
-        .cursor {
-            display: inline-block;
-            width: 8px;
-            height: 16px;
-            background: #d4d4d4;
-            animation: blink 0.7s steps(1) infinite;
-        }
+        // .cursor {
+        //     display: inline-block;
+        //     width: 8px;
+        //     height: 16px;
+        //     background: #d4d4d4;
+        //     animation: blink 0.7s steps(1) infinite;
+        // }
 
-        @keyframes blink {
-            50% {
-                background: transparent;
-            }
-        }
+        // @keyframes blink {
+        //     50% {
+        //         background: transparent;
+        //     }
+        // }
 
         .line {
             display: block;
