--- a/assets/css/sass/main.css
+++ b/assets/css/sass/main.css
@@ -141,24 +141,6 @@ header .fz_sigin ul li:last-child a {
     stroke-dashoffset: 0;
   }
 }
-@media screen and (max-width: 1300px) {
-  #fz-hero-bg .text-content h1 {
-    font-size: 50px;
-    line-height: 0px;
-  }
-}
-@media screen and (max-width: 1190px) {
-  #fz-hero-bg .text-content h1 {
-    font-size: 40px;
-    line-height: 0px;
-  }
-}
-@media screen and (max-width: 1300px) {
-  #fz-hero-bg .text-content h1 svg {
-    width: 170px;
-    height: 150px;
-  }
-}
 #fz-hero-bg .text-content p {
   font-size: 1rem;
   line-height: 24px;
@@ -473,7 +455,6 @@ header .fz_sigin ul li:last-child a {
   height: 41.625rem;
   will-change: transform;
   background-color: #1A2C2A;
-  box-shadow: 0px 0px 8px rgba(16, 106, 64, 0.3607843137);
   --border-angle: 0turn;
   --main-bg: conic-gradient(
       from var(--border-angle),
@@ -481,20 +462,7 @@ header .fz_sigin ul li:last-child a {
       #1A2C2A 100%
       );
   border: solid 1px transparent;
-  --gradient-border: conic-gradient(from var(--border-angle), transparent 10%, #05311d, #3EAB90 49%, transparent);
-  background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
-  background-position: center center;
-  animation: bg-spin 12s linear infinite;
-}
-.panel__stack .panel__card.active {
-  --border-angle: 0turn;
-  --main-bg: conic-gradient(
-      from var(--border-angle),
-      #1A2C2A 0%,
-      #1A2C2A 100%
-      );
-  border: solid 1px transparent;
-  --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #F7C35F, #3EAB90 99%, transparent);
+  --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #f7c35f33, #3EAB90 99%, transparent);
   background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
   background-position: center center;
   animation: bg-spin 4s linear infinite;
@@ -504,17 +472,15 @@ header .fz_sigin ul li:last-child a {
     --border-angle: 1turn;
   }
 }
+.panel__stack .panel__card:hover {
+  --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #F7C35F, #3EAB90 99%, transparent);
+}
 @media screen and (max-width: 1199px) {
   .panel__stack .panel__card {
     grid-area: unset;
     position: unset;
     height: auto !important;
     width: 100%;
-  }
-}
-@media screen and (max-width: 1440px) {
-  .panel__stack .panel__card {
-    height: 36rem;
   }
 }
 
@@ -770,7 +736,6 @@ header .fz_sigin ul li:last-child a {
   min-height: 75px;
 }
 .panel .panel__stack .panel__card .tab-content .fz-tab-card .item-pay div a {
-  display: none;
   color: #3EAB90;
   font-size: 18px;
   text-decoration: none;
@@ -996,16 +961,6 @@ header .fz_sigin ul li:last-child a {
   padding: 25px;
   border-radius: 12px;
   border: solid 1px transparent;
-  --border-angle: 0turn;
-  --main-bg: conic-gradient(
-      from var(--border-angle),
-      #1A2C2A 0%,
-      #1A2C2A 100%
-      );
-  --gradient-border: conic-gradient(from var(--border-angle), transparent 10%, #05311d, #3EAB90 49%, transparent);
-  background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
-  background-position: center center;
-  animation: bg-spin 8s linear infinite;
 }
 .developer_section .dev_left .dev_card:hover {
   --border-angle: 0turn;
@@ -1029,46 +984,42 @@ header .fz_sigin ul li:last-child a {
     text-align: center;
   }
 }
-.developer_section .dev_left .dev_card .dev_card_logo {
-  display: inline-flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-}
-.developer_section .dev_left .dev_card span {
-  width: 60px;
-  height: 60px;
+.developer_section .dev_left .dev_card img {
+  width: 40px;
+  height: 40px;
   object-fit: contain;
   background-color: #3EAB90;
   padding: 10px;
   border-radius: 50%;
   margin-bottom: 10px;
 }
-.developer_section .dev_left .dev_card span img {
-  width: 100%;
-  height: 100%;
-}
 .developer_section .dev_left .dev_card h4 {
   font-size: 20px;
   color: #3EAB90;
   padding-bottom: 10px;
-  color: #d7ba7d;
 }
 .developer_section .dev_left .dev_card p {
   color: #ffffff;
   margin-bottom: 0px;
   transition: all 0.6s ease;
 }
-.developer_section .code-container {
-  white-space: pre; /* Preserve code formatting */
-  font-size: 16px;
-  line-height: 1.5;
-  margin: 0 auto;
-  text-align: left; /* Align text to the left */
-  max-width: 100%; /* Allow the code to wrap naturally */
+.developer_section .dev_right {
+  position: relative;
 }
-.developer_section #processingText {
-  color: #ffffff;
+@media screen and (max-width: 992px) {
+  .developer_section .dev_right {
+    margin-top: 20px;
+  }
+}
+.developer_section .dev_right video {
+  width: 47vw;
+  height: 100%;
+}
+@media screen and (max-width: 992px) {
+  .developer_section .dev_right video {
+    width: 100%;
+    height: 100%;
+  }
 }
 .developer_section #typingEffect {
   color: #d7ba7d;
@@ -1097,17 +1048,28 @@ header .fz_sigin ul li:last-child a {
       #1A2C2A 100%
       );
   border: solid 1px transparent;
-  border-radius: 1em;
+  border-radius: 2em;
   --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #f7c35f33, #3EAB90 99%, transparent);
   background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
   background-position: center center;
   animation: bg-spin 4s linear infinite;
   animation-delay: 0.5s;
-  min-height: 600px;
 }
 @keyframes bg-spin {
   to {
     --border-angle: 1turn;
+  }
+}
+.developer_section .cursor {
+  display: inline-block;
+  width: 8px;
+  height: 16px;
+  background: #d4d4d4;
+  animation: blink 0.7s steps(1) infinite;
+}
+@keyframes blink {
+  50% {
+    background: transparent;
   }
 }
 .developer_section .line {
@@ -1340,7 +1302,7 @@ header .fz_sigin ul li:last-child a {
 }
 .fz-blog .item .card-body {
   padding: 0px 28px 33px 27px;
-  width: 100%;
+  width: 383px;
   border-radius: 0 0 8px 8px;
   border: 1px solid #1A2C2A;
   margin: 0 auto;
@@ -1729,7 +1691,6 @@ header .fz_sigin ul li:last-child a {
 }
 .play_store_section .play_store_right {
   display: flex;
-  border-bottom-right-radius: 40px;
 }
 .play_store_section .play_store_right img {
   position: relative;
