--- a/assets/css/sass/playstore.scss
+++ b/assets/css/sass/playstore.scss
@@ -65,6 +65,7 @@
     }
     .play_store_right{
         display: flex;
+        border-bottom-right-radius: 40px;
         img{
            position: relative;
            z-index: 2;
