--- a/assets/css/sass/faq.scss
+++ b/assets/css/sass/faq.scss
@@ -1,115 +1,115 @@
-@import "./variable.scss";
-.faq_section {
-  background-color: $black;
-  padding: 80px 0px;
-  @media screen and (max-width: 992px) {
-    padding: 60px 0px;
-  }
-  @media screen and (max-width: 992px) {
-    .faq_header {
-      text-align: center;
-    }
-  }
-
-  .accordion-item .accordion-header {
-    border-radius: 16px !important;
-    background: $black !important;
-    margin-bottom: 3px !important;
-    border-top: $primary-color !important;
-  }
-  .accordion-item:first-of-type {
-    border-radius: 16px !important;
-  }
-  .accordion-item:last-of-type > .accordion-header .accordion-button.collapsed {
-    border-radius: 16px !important;
-  }
-  .accordion-item:last-of-type {
-    border-radius: 16px !important;
-  }
-  .faq_section .accordion-button::after {
-    background-color: $white;
-  }
-  .accordion-item:not(:first-of-type) {
-    border-top: 1px solid $primary-color !important;
-  }
-  .accordion-item .accordion-header .accordion-button {
-    position: relative;
-    top: 2px;
-    padding: 25px 42px;
-    background: $black !important;
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 48px;
-    letter-spacing: 2px;
-    text-align: left;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
-    color: $white;
-    border-radius: 16px !important;
-  }
-  .accordion-item {
-    margin-bottom: 20px;
-    border-radius: 16px;
-    border: 1px solid $primary-color;
-    background-color: $black !important;
-  }
-  .accordion-body {
-    font-size: 18px;
+@import './variable.scss';
+.faq_section{
     background-color: $black;
-    color: $white;
-    border-radius: 16px !important;
-    padding: 0px 43px 40px;
-  }
-  .accordion-button:not(.collapsed) {
-    box-shadow: none;
-  }
-  .accordion-item:not(:first-of-type) {
-    border-top: $primary-color;
-  }
-  .accordion-item .accordion-header .accordion-button:focus {
-    box-shadow: none;
-  }
-  .accordion {
-    --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='white'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-    --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='white'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-  }
-  //   .accordion-button::after {
-  //     background-image: none;
-  //     font-family: "Font Awesome 6 Free";
-  //     content: "+";
-  //     height: 35px;
-  //     width: 35px;
-  //     font-weight: bold;
-  //     display: flex;
-  //     justify-content: center;
-  //     align-items: center;
-  //     border-radius: 50%;
-  //     border: 1px solid var(--secondary-color);
-  //     // background-color: $primary-color !important;
-  //     background: transparent !important;
-  //     color: var(--secondary-color);
-  // }
-
-  // .accordion-button:not(.collapsed)::after {
-  //     background-image: none;
-  //     content: "_";
-  //     color: $white;
-  // }
-  h4 {
-    font-size: 24px;
-    font-weight: 500;
-    padding-bottom: 10px;
-    color: $white;
-  }
-  h3 {
-    font-size: 40px;
-    color: $primary-color;
-    font-weight: 600;
-    padding-bottom: 50px;
-    br {
-      @media screen and (max-width: 992px) {
-        display: none;
+    padding: 80px 0px;
+    @media screen and (max-width:992px) {
+      padding: 60px 0px;
+    }
+    @media screen and (max-width:992px) {
+      .faq_header{
+        text-align: center;
       }
     }
-  }
+    
+      .accordion-item .accordion-header{
+        border-radius: 16px !important;
+        background: $black !important;
+        margin-bottom: 3px !important;
+        border-top: $primary-color !important;
+      }
+      .accordion-item:first-of-type{
+        border-radius: 16px !important;
+      }
+      .accordion-item:last-of-type>.accordion-header .accordion-button.collapsed{
+        border-radius: 16px !important;
+      }
+      .accordion-item:last-of-type{
+        border-radius: 16px !important;
+      }
+      .faq_section .accordion-button::after{
+        background-color: $white;
+      }
+      .accordion-item:not(:first-of-type){
+        border-top: 1px solid $primary-color !important;
+      }
+      .accordion-item .accordion-header .accordion-button{
+        position: relative;
+        top: 2px;
+        padding: 25px 42px;
+        background: $black !important;
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 48px;
+        letter-spacing: 2px;
+        text-align: left;
+        text-underline-position: from-font;
+        text-decoration-skip-ink: none;
+        color: $white;
+        border-radius: 16px !important;
+      }
+      .accordion-item{
+        margin-bottom:20px;
+        border-radius:16px;
+        border:1px solid  $primary-color;
+        background-color: $black !important;
+      }
+      .accordion-body{
+        font-size: 18px;
+        background-color: $black;
+        color: $white;
+        border-radius: 16px !important;
+        padding: 0px 43px 40px;
+      }
+      .accordion-button:not(.collapsed){
+        box-shadow: none;
+      }
+      .accordion-item:not(:first-of-type){
+        border-top:$primary-color;
+      }
+      .accordion-item .accordion-header .accordion-button:focus{
+        box-shadow: none;
+      }
+      .accordion {
+        --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='white'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+        --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='white'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+      }
+    //   .accordion-button::after {
+    //     background-image: none;
+    //     font-family: "Font Awesome 6 Free";
+    //     content: "+";
+    //     height: 35px;
+    //     width: 35px;
+    //     font-weight: bold;
+    //     display: flex;
+    //     justify-content: center;
+    //     align-items: center;
+    //     border-radius: 50%;
+    //     border: 1px solid var(--secondary-color);
+    //     // background-color: $primary-color !important;
+    //     background: transparent !important;
+    //     color: var(--secondary-color);
+    // }
+    
+    // .accordion-button:not(.collapsed)::after {
+    //     background-image: none;
+    //     content: "_"; 
+    //     color: $white;
+    // }
+    h4{
+     font-size: 24px;
+     font-weight: 500;
+     padding-bottom:10px;
+     color: $white;
+    }
+    h3{
+       font-size: 40px;
+       color: $primary-color; 
+       font-weight: 600;
+       padding-bottom: 50px;
+       br{
+        @media screen and (max-width:992px) {
+          display: none;
+        }
+      }
+    }
 }
