--- a/assets/css/sass/features.scss
+++ b/assets/css/sass/features.scss
@@ -1,47 +1,105 @@
-@import "./variable.scss";
+@import './variable.scss';
 
-/* PANELS */
-
-.panel__stack {
-  --spacer: 20px;
-  position: relative;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
-  align-items: center;
-  justify-items: center;
-  overflow-y: visible;
-}
-.panel__stack .panel__card {
-  grid-area: 1/1/2/2;
-  border-radius: 8px;
-  padding: 2.5rem;
-  position: absolute;
-  height: 41.625rem;
-  will-change: transform;
-  background-color: $tertiary-color;
-}
-.panel__stack .panel__card.panel__card--one {
-  height: 43rem;
-}
-.panel__stack .panel__card:first-child {
-  top: calc(var(--spacer) * 1);
-  z-index: 1;
-}
-.panel__stack .panel__card:nth-child(2) {
-  top: calc(var(--spacer) * 2);
-  z-index: 2;
-}
-.panel__stack .panel__card:nth-child(3) {
-  top: calc(var(--spacer) * 3);
-  z-index: 3;
-}
-.panel__stack .panel__card:last-child {
-  top: calc(var(--spacer) * 4);
-  z-index: 4;
-}
+  
+  /* PANELS */
+ 
+  .panel__stack {
+    --spacer: 20px;
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    align-items: center;
+    justify-items: center;
+    overflow-y: visible;
+  }
+  .panel__stack .panel__card {
+    grid-area: 1/1/2/2;
+    border-radius: 8px;
+    padding: 2.5rem;
+    position: absolute;
+    height: 41.625rem;
+    will-change: transform;
+    background-color: $tertiary-color;
+    box-shadow: 0px 0px 8px #106a405c;
+    --border-angle: 0turn;
+    --main-bg: conic-gradient(
+        from var(--border-angle),
+        #1A2C2A 0%,  
+        #1A2C2A 100%
+        );
+    border: solid 1px transparent;
+    --gradient-border: conic-gradient(from var(--border-angle), transparent 10%, #05311d, #3EAB90 49%, transparent);
+    background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
+    background-position: center center;
+    animation: bg-spin 12s linear infinite;
+    &.active {
+      --border-angle: 0turn;
+    --main-bg: conic-gradient(
+        from var(--border-angle),
+        #1A2C2A 0%,  
+        #1A2C2A 100%
+        );
+    border: solid 1px transparent;
+    --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #F7C35F, #3EAB90 99%, transparent);
+    background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
+    background-position: center center;
+    animation: bg-spin 4s linear infinite;
+    @keyframes bg-spin {
+        to {
+        --border-angle: 1turn;
+        }
+    }
+    }
+    @media screen and (max-width: 1199px) {
+      grid-area:unset;
+      position: unset;
+      height: auto !important;
+      width: 100%;
+     
+    }
+    @media screen and (max-width: 1440px) {
+      height: 36rem;
+    }
+  }
+  @property --border-angle {
+      syntax: "<angle>";
+      inherits: true;
+      initial-value: 0turn;
+  }
+  .panel__stack .panel__card:nth-child(1) {
+    animation-delay: 0s;
+  }
+  .panel__stack .panel__card:nth-child(2) {
+      animation-delay: 0.5s; 
+  }
+  .panel__stack .panel__card:nth-child(3) {
+      animation-delay: 1s;
+  }
+  .panel__stack .panel__card:nth-child(4) {
+    animation-delay: 1.5s; 
+  }
+  .panel__stack .panel__card.panel__card--one {
+    height: 43rem;
+  }
+  .panel__stack .panel__card:first-child {
+    top: calc(var(--spacer) * 1);
+    z-index: 1;
+  }
+  .panel__stack .panel__card:nth-child(2) {
+    top: calc(var(--spacer) * 2);
+    z-index: 2;
+  }
+  .panel__stack .panel__card:nth-child(3) {
+    top: calc(var(--spacer) * 3);
+    z-index: 3;
+  }
+  .panel__stack .panel__card:last-child {
+    top: calc(var(--spacer) * 4);
+    z-index: 4;
+  }
 //   .panel__stack .panel__card ul {
 //     margin: 0;
 //     padding-right: 30px;
@@ -77,189 +135,207 @@
 //     position: relative;
 //     right: -10px;
 //   }
-
-.panel__content {
-  width: 48%;
-}
-
-.panel__image {
-  width: 52%;
-}
-.panel__image img {
-  max-height: 30rem;
-}
-
-.panel__card__img {
-  border-radius: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 60px 48px;
-  max-width: 450px;
-  width: 100%;
-  margin-left: auto;
-  position: relative;
-}
-
-.sticky-notes {
-  width: 209px;
-  padding: 10px 15px;
-  position: absolute;
-  background: #fff;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  left: -70px;
-  bottom: 30px;
-}
-.sticky-notes .draw-line {
-  position: absolute;
-  top: -70px;
-  left: -80px;
-}
-
-.sticky-notes__items {
-  gap: 10px;
-}
-.sticky-notes__items div {
-  padding: 10px 30px;
-  border-radius: 8px;
-}
-.sticky-notes__items div:first-child {
-  background-color: #fad1d1;
-  color: #d92d20;
-}
-.sticky-notes__items div:nth-child(2) {
-  background-color: #f4fad1;
-  color: #f79009;
-}
-.sticky-notes__items div:last-child {
-  background-color: #d1fadf;
-  color: #039855;
-}
-
-.sticky-card {
-  padding: 10px 15px;
-  position: absolute;
-  background: #fff;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-  right: -70px;
-  top: 30px;
-  max-width: 210px;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
-}
-.sticky-card .checkbox {
-  width: 16px;
-  height: 16px;
-  display: inline-block;
-  border: 1px solid #d0d5dd;
-  border-radius: 5px;
-  vertical-align: middle;
-}
-
-.sticky-cards__items {
-  gap: 10px;
-}
-
-.sticky-card.sticky-card-left {
-  bottom: 50px;
-  left: -100px;
-  top: initial;
-}
-
-.panel__card--one .panel__card__img {
-  background-color: #a9a3ff;
-}
-
-.panel__card--two .panel__card__img {
-  background-color: #d1f2ff;
-}
-
-.panel__card--three .panel__card__img {
-  background-color: #ffc183;
-}
-
-.panel__card--four .panel__card__img {
-  background-color: #98d89c;
-}
-
-.panel {
-  padding-top: 80px !important;
-  position: relative;
-  z-index: 9;
-  .panel__options {
+  
+  .panel__content {
+    width: 48%;
+  }
+  
+  .panel__image {
+    width: 52%;
+  }
+  .panel__image img {
+    max-height: 30rem;
+  }
+  
+  .panel__card__img {
+    border-radius: 30px;
     display: flex;
     justify-content: center;
-    gap: 40px;
     align-items: center;
-    span {
-      font-size: 16px;
-      color: $white;
-      padding: 12px 0;
-      transition: all 0.5s ease;
-      margin-bottom: 20px;
-    }
+    padding: 60px 48px;
+    max-width: 450px;
+    width: 100%;
+    margin-left: auto;
+    position: relative;
   }
-  .panel__stack {
-    .panel__card {
-      h2 {
-        color: $white;
-        font-size: 36px;
-        margin-bottom: 30px;
-      }
-      .nav.nav-pills {
-        border-bottom: 1px solid $white;
-        margin-bottom: 35px;
-        li {
-          margin-right: 30px;
-          .nav-link {
+  
+  .sticky-notes {
+    width: 209px;
+    padding: 10px 15px;
+    position: absolute;
+    background: #fff;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    left: -70px;
+    bottom: 30px;
+  }
+  .sticky-notes .draw-line {
+    position: absolute;
+    top: -70px;
+    left: -80px;
+  }
+  
+  .sticky-notes__items {
+    gap: 10px;
+  }
+  .sticky-notes__items div {
+    padding: 10px 30px;
+    border-radius: 8px;
+  }
+  .sticky-notes__items div:first-child {
+    background-color: #fad1d1;
+    color: #d92d20;
+  }
+  .sticky-notes__items div:nth-child(2) {
+    background-color: #f4fad1;
+    color: #f79009;
+  }
+  .sticky-notes__items div:last-child {
+    background-color: #d1fadf;
+    color: #039855;
+  }
+  
+  .sticky-card {
+    padding: 10px 15px;
+    position: absolute;
+    background: #fff;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    right: -70px;
+    top: 30px;
+    max-width: 210px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+  }
+  .sticky-card .checkbox {
+    width: 16px;
+    height: 16px;
+    display: inline-block;
+    border: 1px solid #d0d5dd;
+    border-radius: 5px;
+    vertical-align: middle;
+  }
+  
+  .sticky-cards__items {
+    gap: 10px;
+  }
+  
+  .sticky-card.sticky-card-left {
+    bottom: 50px;
+    left: -100px;
+    top: initial;
+  }
+  
+  .panel__card--one .panel__card__img {
+    background-color: #a9a3ff;
+  }
+  
+  .panel__card--two .panel__card__img {
+    background-color: #d1f2ff;
+  }
+  
+  .panel__card--three .panel__card__img {
+    background-color: #ffc183;
+  }
+  
+  .panel__card--four .panel__card__img {
+    background-color: #98d89c;
+  }
+
+.panel {
+    padding-top: 80px !important;
+    position: relative;
+    z-index: 9;
+    .panel__options {
+        display: flex;
+        justify-content: center;
+        gap: 40px;
+        align-items: center;
+        span {
+            font-size: 16px;
             color: $white;
-            font-size: 20px;
-            padding: 0;
-            padding-bottom: 10px;
-            border-radius: unset;
-            background-color: transparent;
-            &.active {
-              background-color: transparent;
-              border-bottom: 3px solid $primary-color;
-            }
-          }
+            padding: 12px 0; 
+            transition: all 0.5s ease;
+            margin-bottom: 20px;
         }
-      }
-      .tab-content {
-        .fz-tab-card {
-          display: flex;
-          gap: 40px;
-          .item-pay {
-            border-radius: 8px;
-            div {
-              padding: 20px;
-              background-color: $black;
-              border-bottom-left-radius: 8px;
-              border-bottom-right-radius: 8px;
-              h3 {
-                color: $secondary-color;
-                font-size: 20px;
-              }
-              p {
-                color: $white;
-                font-size: 18px;
-                line-height: 25px;
-                min-height: 75px;
-              }
-              a {
-                color: $primary-color;
-                font-size: 18px;
-                text-decoration: none;
-              }
-            }
-          }
+        @media screen and (max-width: 1199px) {
+          display: none;
         }
-      }
     }
-  }
+    .panel__stack {
+        .panel__card {
+            h2 {
+                color: $white;
+                font-size: 36px;
+                margin-bottom: 30px;
+            }
+            .nav.nav-pills {
+                border-bottom: 1px solid $white;
+                margin-bottom: 35px;
+                li {
+                    margin-right: 30px;
+                    .nav-link {
+                        color: $white;
+                        font-size: 20px;
+                        padding: 0;
+                        padding-bottom: 10px;
+                        border-radius: unset;
+                        background-color: transparent;
+                        &.active {
+                            background-color: transparent;
+                            border-bottom: 3px solid $primary-color;
+                        }
+                    }
+                }
+            }
+            .tab-content {
+                .fz-tab-card {
+                    display: flex;
+                    gap:40px;
+                    @media screen and (max-width: 767px) {
+                      flex-direction: column;
+                    }
+                    @media screen and (min-width: 768px) and (max-width: 1199px) {
+                      flex-wrap: wrap;
+                    }
+                    .item-pay {
+                        border-radius: 8px;
+                        @media screen and (min-width: 768px) and (max-width: 1199px) {
+                          width: calc(50% - 20px);
+                        }
+                        img {
+                          @media screen and (min-width: 768px) and (max-width: 1199px) {
+                            width: 100%;
+                          }
+                        }
+                        div {
+                            padding: 20px;
+                            background-color: $black;
+                            border-bottom-left-radius: 8px;
+                            border-bottom-right-radius: 8px;
+                            h3 {
+                                color: $secondary-color;
+                                font-size: 20px;
+                            }
+                            p {
+                                color: $white;
+                                font-size: 18px;
+                                line-height: 25px;
+                                min-height: 75px;
+                            }
+                            a {
+                                display: none;
+                                color: $primary-color;
+                                font-size: 18px;
+                                text-decoration: none;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
