--- a/assets/css/sass/product.scss
+++ b/assets/css/sass/product.scss
@@ -1,6 +1,7 @@
 @import "./variable.scss";
 $font-style: "Montserrat", sans-serif;
 .fz_product_sec {
+//   background-color: #1a2c2a;
   position: relative;
   z-index: 0;
   .fz_container {
@@ -10,70 +11,70 @@ $font-style: "Montserrat", sans-serif;
     flex-wrap: nowrap;
     overflow: hidden;
     @media only screen and (max-width: 720px) {
-      display: block;
-    }
-    @keyframes animateBg {
-      0% {
-        background-position: 0% 0%;
+       display: block;
       }
-      100% {
-        background-position: 0% 100%;
+      @keyframes animateBg {
+        0% {
+          background-position: 0% 0%;
+        }
+        100% {
+          background-position: 0% 100%;
+        }
       }
-    }
-    @mixin anim-global {
-      animation: animateBg 11s linear infinite;
-      background-size: 100% 300%;
-    }
-    .item-1 {
-      @include anim-global;
-      background-image: linear-gradient(
-        0deg,
-        #18273a,
-        #003224,
-        #18273a,
-        #003224
-      );
-    }
-    .item-2 {
-      @include anim-global;
-      background-image: linear-gradient(
-        0deg,
-        #01391f,
-        #0b3638,
-        #01391f,
-        #0b3638
-      );
-    }
-    .item-3 {
-      @include anim-global;
-      background-image: linear-gradient(
-        0deg,
-        #013a34,
-        #2e3301,
-        #013a34,
-        #2e3301
-      );
-    }
-    .item-4 {
-      @include anim-global;
-      background-image: linear-gradient(
-        0deg,
-        #373f01,
-        #012949,
-        #373f01,
-        #012949
-      );
-    }
-    .item-5 {
-      @include anim-global;
-      background-image: linear-gradient(
-        0deg,
-        #18273a,
-        #003224,
-        #18273a,
-        #003224
-      );
-    }
+      @mixin anim-global {
+        animation: animateBg 11s linear infinite;
+        background-size: 100% 300%;
+      }
+      .item-1 {
+        @include anim-global;
+        background-image: linear-gradient(
+          0deg,
+          #18273a,
+          #003224,
+          #18273a,
+          #003224
+        );
+      }
+      .item-2 {
+        @include anim-global;
+        background-image: linear-gradient(
+          0deg,
+          #01391f,
+          #0b3638,
+          #01391f,
+          #0b3638
+        );
+      }
+      .item-3 {
+        @include anim-global;
+        background-image: linear-gradient(
+          0deg,
+          #013a34,
+          #2e3301,
+          #013a34,
+          #2e3301
+        );
+      }
+      .item-4 {
+        @include anim-global;
+        background-image: linear-gradient(
+          0deg,
+          #373f01,
+          #012949,
+          #373f01,
+          #012949
+        );
+      }
+      .item-5 {
+        @include anim-global;
+        background-image: linear-gradient(
+          0deg,
+          #18273a,
+          #003224,
+          #18273a,
+          #003224
+        );
+      }  
     .fz_sub_container {
       display: flex;
       align-items: center;
@@ -94,26 +95,26 @@ $font-style: "Montserrat", sans-serif;
       @media only screen and (max-width: 720px) {
         display: block;
         gap: 16px;
-      }
+       }
       .fz_content {
         position: relative;
         width: 620px;
         @media only screen and (max-width: 720px) {
-          width: 100%;
+            width: 100%;
+           }
+        &:after {
+          content: "";
+          position: absolute;
+          width: 676px;
+          height: 676px;
+          top: 5px;
+          left: -12px;
+          background-color: #20918182;
+          border-radius: 50%;
+          filter: blur(152px);
+          transform: translate3d(0, 0, 0);
+          z-index: -1;
         }
-        // &:after {
-        //   content: "";
-        //   position: absolute;
-        //   width: 676px;
-        //   height: 676px;
-        //   top: 5px;
-        //   left: -12px;
-        //   background-color: #20918182;
-        //   border-radius: 50%;
-        //   filter: blur(152px);
-        //   transform: translate3d(0, 0, 0);
-        //   z-index: -1;
-        // }
         .fz_num {
           padding-bottom: 16px;
           h3 {
@@ -154,7 +155,6 @@ $font-style: "Montserrat", sans-serif;
           line-height: 26px;
         }
         .fz_btn button {
-          font-family: "Roboto";
           font-size: 16px;
           font-weight: 400;
           background-color: $primary-color;
@@ -167,25 +167,26 @@ $font-style: "Montserrat", sans-serif;
       }
       .fz_img-sec {
         position: relative;
-        // &::after {
-        //   content: "";
-        //   position: absolute;
-        //   width: 366px;
-        //   height: 330px;
-        //   top: 290px;
-        //   right: 50px;
-        //   background: #24a7af;
-        //   filter: blur(212px);
-        //   transform: translate3d(0, 0, 0);
-        // }
+        &::after {
+          content: "";
+          position: absolute;
+          width: 366px;
+          height: 330px;
+          top: 290px;
+          right: 50px;
+          background: #24a7af;
+          filter: blur(212px);
+          transform: translate3d(0, 0, 0);
+        
+        }
         .fz_img {
           position: relative;
           .image_1 {
             opacity: 0.3;
             @media only screen and (max-width: 720px) {
-              width: 100%;
-              // height: 100%;
-            }
+                width: 100%;
+                // height: 100%;
+               }
           }
           img {
             &:last-child {
@@ -195,7 +196,7 @@ $font-style: "Montserrat", sans-serif;
               transform: translate(-50%, -50%);
             }
           }
-
+          
           // .core_img {
           //   position: absolute;
           //   top: 0;
