--- a/assets/css/sass/product_intro.scss
+++ b/assets/css/sass/product_intro.scss
@@ -1,84 +1,112 @@
-@import "./variable.scss";
-.features_posibilityies {
-  padding: 0;
-  background-color: #000 !important;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #f0f0f0;
-  overflow: hidden;
-  height: 100vh;
-  .container {
-    position: relative;
-    text-align: center;
-    width: 50%;
-    margin: 0 auto;
-    display: inline-flex;
-    align-items: center;
+@import './variable.scss';
+.features_posibilityies{
+    padding: 0;
+    background-color: #000 !important;
+    display: flex;
     justify-content: center;
-    .texts {
-      height: 100vh;
-      width: 100%;
-      margin: 0 auto;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      position: relative;
-      top: 100px;
-    }
-
-    .inner-text {
-      position: absolute;
-      margin: 0 auto;
-      height: 100vh;
-      width: 100%;
-      z-index: 1;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-
-      .left,
-      .right {
-        &.left {
-          text-align: right;
-          display: inline-flex;
-          align-items: center;
-          justify-content: center;
-          margin: auto;
-          position: relative;
+    align-items: center;
+    background: #f0f0f0;
+    overflow: hidden;
+    height: 100vh;
+    .container {
+        position: relative;
+        text-align: center;
+        width: 50%;
+        margin: 0 auto;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        .texts {
+            height: 100vh;
+            width: 100%;
+            margin: 0 auto;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            top: 125px;
+            img {
+                @media screen and (max-width: 1440px) {
+                    height: 1100px;
+                }
+            }
         }
-
-        &.right {
-          text-align: left;
-          display: inline-flex;
-          align-items: center;
-          justify-content: center;
-          margin: auto;
-          position: relative;
+    
+        .inner-text {
+            position: absolute;
+            margin: 0 auto;
+            height: 100vh;
+            width: 100%;
+            z-index: 1;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            .left {
+                img {
+                    @media screen and (max-width: 1440px) {
+                        height: 1200px;
+                    }
+                }
+            }  
+            .right {
+                img {
+                    @media screen and (max-width: 1440px) {
+                        height: 1150px;
+                    }
+                }
+            }  
+            
+            .left, .right {
+             
+                
+                &.left {
+                    text-align: right;
+                    display: inline-flex;
+                    align-items: center;
+                    justify-content: center;
+                    margin: auto;
+                    position: relative;
+                  
+                }
+    
+                &.right {
+                    text-align: left;
+                    display: inline-flex;
+                    align-items: center;
+                    justify-content: center;
+                    margin: auto;
+                    position: relative;
+                   
+                }
+            }
+           
         }
-      }
+        .dd {
+            position: absolute;
+            left: 0px;
+            right: 0px;
+            translate: none;
+            rotate: none;
+            scale: none;
+            transform: translate(0px, 0px);
+            opacity: 1;
+        }
+        h2{
+            font-weight: bolder;
+            font-size: 50px;
+            color: #ddd;
+            text-transform: uppercase;
+        }
+        h3{
+            font-weight:200;
+            font-size: 75px;
+            color: #ddd;
+            text-transform: capitalize;
+        }
     }
-    .dd {
-      position: absolute;
-      left: 0px;
-      right: 0px;
-      translate: none;
-      rotate: none;
-      scale: none;
-      transform: translate(0px, 0px);
-      opacity: 1;
-    }
-    h2 {
-      font-weight: bolder;
-      font-size: 50px;
-      color: #ddd;
-      text-transform: uppercase;
-    }
-    h3 {
-      font-weight: 200;
-      font-size: 75px;
-      color: #ddd;
-      text-transform: capitalize;
-    }
-  }
 }
+
+
+
+
+
